authenticated with JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+
+app.jwt.secret=2D7CWrvq2/POegXyKCgrvCuEluhiFOdtr3AKr8k9NSU=
